<resources>
    <string name="app_name">Lic Agent Diary</string>
    <string name="action_settings">Settings</string>
    <string name="add_policy_holder_activity">Add new policy holder</string>
    <string name="view_policy_holder_detail_activity">View details</string>
    <string name="edit_policy_holder_activity">Edit details</string>
    <string-array name="mode_array">
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Half-yearly</item>
        <item>Yearly</item>
    </string-array>
    <string name="mode">Mode</string>
    <string name="member_image_icon">Image Icon</string>
    <string name="member_name">Name</string>
    <string name="policy_name">Policy Name</string>
    <string name="policy_number">Policy Number</string>
    <string name="call_button">Call</string>
    <string name="search_hint">Search Policy Holders</string>
    <string name="title_activity_view_policy_holder_detail">ViewPolicyHolderDetail</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->


    <!-- Add Photo Dialog-->
    <string-array name="add_photo">
        <item>Take a photo</item>
        <item>Select from Gallery</item>
    </string-array>
    <!-- Policy Menu Popup Dialog-->
    <string-array name="policy_menu">
        <item>View</item>
        <item>Edit</item>
        <item>Share</item>
        <item>Delete</item>
    </string-array>


    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Yash Kakkar</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Settings for Appearance -->
    <string name="pref_header_appearance">Appearance</string>

    <!-- Settings for App Language -->
    <string name="pref_header_app_language">App Language</string>

    <!-- Settings for About -->
    <string name="pref_header_about">About</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="edit_notes">Edit Notes</string>

</resources>
