<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.yashkakkar.licagentdiary.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.yashkakkar.licagentdiary.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.yashkakkar.licagentdiary.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.yashkakkar.licagentdiary.SettingsActivity$AppearancePreferenceFragment"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:title="@string/pref_header_appearance"/>

    <header
        android:fragment="com.yashkakkar.licagentdiary.SettingsActivity$AppLanguagePreferenceFragment"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/pref_header_app_language"/>

    <header
        android:fragment="com.yashkakkar.licagentdiary.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_about"/>

</preference-headers>
